homepage promary button fixed on Firefox

--- a/theme_maker/eluminate_addons.less
+++ b/theme_maker/eluminate_addons.less
@@ -375,6 +375,7 @@ font-size: 120%;
 
 .btn-primary {
     background-color: @headingColor;
+    background-image: linear-gradient(to bottom, rgb(222, 126, 200), rgb(172, 90, 150));
     background-image: -webkit-linear-gradient(top, rgb(222, 126, 200), rgb(172, 90, 150));
     &:hover {
 	background-color: @headingColor+#111;
